# BDSM

./: .gitignore  CHANGELOG.md  CNAME  README.md  app.py  out.html  pyproject.toml  requirements.txt
Data/de-DE/: Advantages.yaml  AnimistForces.yaml  Aspects.yaml  Attributes.yaml  BlessedTraditions.yaml  Books.yaml  Brews.yaml  CombatSpecialAbilityGroups.yaml  CombatTechniques.yaml  Conditions.yaml  CoreRules-Online.txt  Curses.yaml  ElvenMagicalSongs.yaml  Equipment.yaml  LiturgicalChantEnhancements.yaml  LiturgicalChants.yaml  MagicalDances.yaml  MagicalTraditions.yaml  OptionalRules.yaml  PatronCategories.yaml  Patrons.yaml  Properties.yaml  RaceVariants.yaml  Subjects.yaml  Tribes.yaml  UI.yaml  ZibiljaRituals.yaml
Data/en-US/: ArcaneDancerTraditions.yaml  Attributes.yaml  BlessedTraditions.yaml  Books.yaml  Cantrips.yaml  CombatSpecialAbilityGroups.yaml  Cultures.yaml  Curses.yaml  ExperienceLevels.yaml  EyeColors.yaml  FocusRules.yaml  HairColors.yaml  LiturgicalChants.yaml  MagicalDances.yaml  MagicalMelodies.yaml  MagicalTraditions.yaml  OptionalRules.yaml  ProfessionVariants.yaml  Properties.yaml  RaceVariants.yaml  Races.yaml  Reaches.yaml  Spells.yaml
Data/fr-FR/: ArmorTypes.yaml  Aspects.yaml  Attributes.yaml  Blessings.yaml  CombatSpecialAbilityGroups.yaml  CombatTechniqueGroups.yaml  Pacts.yaml  (+17 more)
UNKNOWN.egg-info/: SOURCES.txt
src/: app.py  gunicorn.config.py  main.py
test/: conftest.py  test_auth.py  test_pytest.py
tests/: conftest.py  test_auth.py  test_models.py  test_requests.py
website/: __init__.py  auth.py  database.db  models.py  views.py
(+305 files in other folders)
